fix: remove overlapping action text

--- a/docker/advocase-image/build-files/suitecrm/public/legacy/themes/suite8/css/suitep-base/panels.scss
+++ b/docker/advocase-image/build-files/suitecrm/public/legacy/themes/suite8/css/suitep-base/panels.scss
@@ -273,7 +273,7 @@ div.sub-panel {
 
 .sub-panel tbody tr td .sugar_action_button > a:link {
   border-bottom: none;
-  color: $list-view-button-color;
+  color: transparent;
   padding-top: 0px;
   padding-bottom: 0px;
 }
